--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       </form>
     </div>
     <script>
+      // test 2017-04-18, 1
       // Guess the mimetype and update the Content-Type
       // Inspired from http://jsbin.com/akati3/2
       var file = document.getElementById('file');
