updated to objects-us-east-1.dream.io

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <input id="url" readonly value="{{{url}}}">
       </p>
       {{/url}}
-      <form action="https://{{bucket}}.objects-us-west-1.dream.io" method="post" enctype="multipart/form-data" name="uploadForm">
+      <form action="https://{{bucket}}.objects-us-east-1.dream.io" method="post" enctype="multipart/form-data" name="uploadForm">
         <fieldset>
           <legend>Upload</legend>
           <input type="hidden" name="key" value="">
